\name{champnews}
\title{ChAMP News}
\encoding{UTF-8}

\section{Version 2.8.5}{
  \itemize{
    \item champ.DMP() works on numeric variable now
    \item champ.DMP() do pairewise comparison between each two categorical phenotypes.
    \item goseq was replaced by gometh.
	\item DMP.GUI() is modified heavily.
	\item SVD plot added legend.
	\item "minfi" loading method fixed.
	\item vignette of ChAMP and github Demo pages updated.
	\item Added some figures from GSE40279 in vignette.
  }
}

\section{Version 2.8.3}{
  \itemize{
    \item Updated zzz.R file, which means the loading messages would be different.
    \item Fixed a warning in champ.load.Rd file.
    \item Fixed bug in champ.filter(), if filerDetP is false, update pd part would faile because of lacking of RemainSample variable.
  }
}


\section{Version 2.8.2}{
  \itemize{
    \item Updated EPIC annotation to B4 version. The B4 version is downloaded from illumina website.
    \item Added one new parameter "method" in champ.load() function, which allows user to choose which method they want to use to read data. ChAMP or Minfi.
    \item champ.filter() has been totally recoded, now user can do any filtering on any data set they want. Merely champ.filter() is focused to take champ.import() result as input and generate filtered beta value for future analysis.
    \item Provide Whole New function champ.import() to read IDAT file to R, which is similar to minfi's read.meth.exp() function.
    \item Added more strict checking in champ.runCombat(), now champ.runCombat() would check if your variable and batches conflict with each other.
    \item Removed some useless code in champ.DMR() to make it faster.
  }
}

\section{Version 2.8.1}{
  \itemize{
    \item Added impute option for champ.load().
    \item Add ProbeCutoff and SampleCutoff parameters in champ.load().